--- a/src/app/features/lms/ind/components/policy/components/account-details/account-details.component.html
+++ b/src/app/features/lms/ind/components/policy/components/account-details/account-details.component.html
@@ -3,7 +3,7 @@
     <p-tabMenu [model]="accountDetailItems" [activeItem]="accountDetailActiveItem">
       <ng-template pTemplate="item" let-item>
         <div>
-          <span style="color: black"> {{ item.label }}</span>
+          <span style="color: black; padding-right:1rem; cursor: pointer;"> {{ item.label }}</span>
         </div>
       </ng-template>
     </p-tabMenu>
