--- a/src/app/features/lms/ind/components/policy/components/underwriting/underwriting.component.css
+++ b/src/app/features/lms/ind/components/policy/components/underwriting/underwriting.component.css
@@ -9,12 +9,19 @@
   border-color:#ffffff;
   border-bottom-color: #000;
   border-width: 0 0 4px 0 ;
+  
   color: #000;
 }
 
 :host ::ng-deep .p-tabmenu .p-tabmenu-nav .p-tabmenuitem .p-menuitem-link {
   padding: 0.4rem;
   font-size: 14px;
+}
+:host ::ng-deep .p-highlight {
+  font-weight: 500;
+  text-decoration: underline;
+  color: black;
+  
 }
 
 .btn-danger {
@@ -35,7 +42,7 @@
 .modal-content-undw {
   width: 170% !important;
   transform: translate(-8rem, 3rem);
-  height: 65rem !important;
+  height: 105rem !important;
   font-size: 13px;
 }
 
