--- a/src/app/features/lms/ind/components/quotation/components/personal-details/personal-details.component.css
+++ b/src/app/features/lms/ind/components/quotation/components/personal-details/personal-details.component.css
@@ -112,7 +112,10 @@ tr.ng-star-inserted {
 .draft:hover{
   color: var(--primary-color);
   background-color: white;
-  font-weight: 500;
+
+  border: solid 3px #9ea9d8;
+  font-size: 11px;
+  font-weight: 600;
 
 }
 
