--- a/src/app/features/gis/components/policy/components/policy-product/policy-product.component.html
+++ b/src/app/features/gis/components/policy/components/policy-product/policy-product.component.html
@@ -9,9 +9,6 @@
                     <div class="row mb-4">
                         <div class="mb-1 col-sm-4 col-12">
                             <label for="client" class="required product-label" id="client">Client</label>
-                            <!-- <select class="form-select form-control-sm mb-1 ms-n4" id="product-input" formControlName="source" data-bs-toggle="modal" data-bs-target="#clientModal">
-                                <option value=""></option>
-                            </select> -->
                             <input type="text" id="quote-input" class="form-control form-control-sm mb-1"
                                 formControlName="client_code" [value]="clientCode " [(ngModel)]="clientName"
                                 data-bs-toggle="modal" data-bs-target="#clientModal" readonly>
@@ -31,12 +28,16 @@
                             </select>
                         </div>
                         <div class=" mb-1 col-sm-4 col-12 ">
-                            <label for="product" class="required product-label" id="product">Product</label>
-                            <select class="form-select form-control-sm mb-1 ms-n4" id="product-input"
-                                formControlName="source">
-                                <option value=""></option>
+                            <label for="product" class="required product-label" id="product">Product</label><br>
+                            <p-dropdown formControlName="product_code" [options]="ProductDescriptionArray"
+                                optionLabel="description" (onChange)="onProductSelected($event.value)" placeholder=" "
+                                [filterBy]="'description'" [filter]="true"></p-dropdown>
 
-                            </select>
+                            <!-- Display error message under the field -->
+                            <div *ngIf="policyProductForm.get('product_code').hasError('required') && policyProductForm.get('product_code').touched"
+                                class="form-text text-danger">
+                                Product is required.
+                            </div>
                         </div>
                     </div>
                     <!-- ROW 2 -->
@@ -185,10 +186,10 @@
                                                 <span class="p-input-icon-left ml-auto">
                                                     <i class="pi pi-search search-icon"></i>
                                                 </span>
-                                                    <input class="search-input" pInputText type="text"
-                                                        (input)="applyFilterGlobal($event, 'contains')"
-                                                        placeholder="Search" />
-                                               
+                                                <input class="search-input" pInputText type="text"
+                                                    (input)="applyFilterGlobal($event, 'contains')"
+                                                    placeholder="Search" />
+
                                             </div>
                                         </ng-template>
                                         <ng-template pTemplate="header">
