--- a/src/app/features/base/components/header-sub-menu/header-sub-menu.component.html
+++ b/src/app/features/base/components/header-sub-menu/header-sub-menu.component.html
@@ -277,7 +277,7 @@
               style="
                 width: 300px;
                 padding: 1em 2em 1em 0.5em;
-                
+
               "
             >
               <div class="d-flex justify-content-between">
@@ -306,7 +306,7 @@
                   class="col-3 d-flex justify-content-start align-items-center"
                 >
                   <label for="input2" class="form-label .label-text-without-pointer text-black fw-medium" style="font-size: 12px;">
-                    {{ 'base.policy_id' | translate }}: 
+                    {{ 'base.policy_id' | translate }}:
                   </label>
                 </div>
                 <div class="col-9" style="padding: 0.5rem 0">
@@ -326,7 +326,7 @@
                   class="col-3 d-flex justify-content-start align-items-center"
                 >
                   <label for="input2" class="form-label .label-text-without-pointer text-black fw-medium" style="font-size: 12px;">
-                    {{ 'base.quot_id' | translate }}: 
+                    {{ 'base.quot_id' | translate }}:
                   </label>
                 </div>
                 <div class="col-9" style="padding: 0.5rem 0">
@@ -426,6 +426,30 @@
                   <a class="dropdown-item" (click)="dynamicSideBarMenu(team)">{{
                     team["name"]
                   }}</a>
+                </li>
+              </ng-container>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+              style="font-size: 12px"
+            >
+              <i
+                class="fa-solid fa-money-bill-transfer"
+                style="padding-right: 6px; font-size: 16px"
+              ></i
+              >{{ "base.FMS" | translate | uppercase }}
+            </a>
+            <ul class="dropdown-menu">
+              <ng-container *ngFor="let fms of fmsSubMenuList">
+                <li>
+                  <a class="dropdown-item" (click)="dynamicSideBarMenu(fms)">
+                    {{ 'base.' +fms["name"] | translate }}
+                  </a>
                 </li>
               </ng-container>
             </ul>
